# billgen

./: .gitignore  README.md  car_cleaning.py  car_service.py  fuel.py  internet_bill.html  main.py  pyproject.toml
src/billgen/: __init__.py
templates/: car_cleaning.html  car_service.html  fuel_bill.html
