[project]
name = "billgen"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Priyanshu Jain", email = "ipriyanshujain@gmail.com" }
]
dependencies = [
    "pdfkit>=1.0.0",
    "weasyprint>=61.2",
    "selenium>=4.18.1",
    "imgkit>=1.2.3",
    "jinja2>=3.1.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/billgen"]
